--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -11,9 +11,10 @@ $blue: #3490dc;
 $indigo: #6574cd;
 $purple: #9561e2;
 $pink: #f66d9b;
-$red: #e3342f;
+$red: #ac0a05;
 $orange: #f6993f;
 $yellow: #ffed4a;
 $green: #38c172;
 $teal: #4dc0b5;
 $cyan: #6cb2eb;
+$secondaryRed: #a00009
