--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -6,3 +6,10 @@
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
+
+
+footer{
+    background-color: $danger;
+    color: whitesmoke;
+    padding: 10px;
+}
