added in some basic routes

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10005,6 +10005,12 @@ h3 {
   }
 }
 footer {
+  background-color: #ac0a05;
   color: whitesmoke;
   padding: 10px;
+}
+
+.heroBanner {
+  min-height: 200px;
+  height: auto;
 }
