--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -18,3 +18,9 @@ footer{
     min-height: 200px;
     height: auto;
 }
+.navbar p {
+    color: white;
+    font-size: 22px;
+    font-weight: bolder;
+    font-family: 'Nunito', sans-serif;
+}
