--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10008,6 +10008,7 @@ footer {
   background-color: #ac0a05;
   color: whitesmoke;
   padding: 10px;
+  text-align: center;
 }
 
 .heroBanner {
@@ -10017,7 +10018,7 @@ footer {
 
 .navbar p {
   color: white;
-  font-size: 22px;
+  font-size: 16px;
   font-weight: bolder;
   font-family: "Nunito", sans-serif;
 }
