--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -12,6 +12,7 @@ footer{
     background-color: $danger;
     color: whitesmoke;
     padding: 10px;
+    text-align: center;
 }
 
 .heroBanner {
@@ -20,7 +21,7 @@ footer{
 }
 .navbar p {
     color: white;
-    font-size: 22px;
+    font-size: 16px;
     font-weight: bolder;
     font-family: 'Nunito', sans-serif;
 }
