--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -25,3 +25,70 @@ footer{
     font-weight: bolder;
     font-family: 'Nunito', sans-serif;
 }
+.league-table{overflow-x:auto;padding-bottom:5px}
+.league-table table{font-family:Arial,"Helvetica Neue",Helvetica,sans-serif;border-collapse:collapse}
+.league-table thead tr{background-color:#f4f4f4;border-bottom:1px solid #bdbdbd}
+.league-table tbody td:last-child,.league-table thead th:last-child{padding-right:15px;font-weight:600}
+.league-table tbody td:first-child,.league-table thead th:first-child{padding-left:15px}
+.league-table thead th:first-child{padding-right:10px}.league-table thead th:nth-child(2){text-align:left}
+.league-table td,.league-table th{padding:4px 9px;font-size:14.5px}.league-table td{height:36px}.league-table th{height:25px}
+.league-table tr:nth-of-type(even){background-color:#fafafa}.league-table td:nth-last-of-type(-n+8){text-align:center;min-width:20px;height:27px}
+.league-table td:nth-of-type(2){font-weight:600;padding-right:20px;width:110px;word-wrap:break-word;overflow:hidden}
+.league-table tfoot tr{padding-top:10px;font-size:.75em;border:none}.league-table tr{border-bottom:1px solid #bdbdbd}
+.league-table caption{background:#cb2d3e;background:-webkit-linear-gradient(to right,#ef473a,#cb2d3e);background:linear-gradient(to right,#ef473a,#cb2d3e);color:#fff;padding:10px;letter-spacing:1px;font-size:1.1em}#reverseTable,.toggle{cursor:pointer}#reverseTable span{font-size:.7em;color:#434343}
+.hide-team{position:absolute;visibility:hidden}.toggle{margin:6px auto 0 auto;width:25px}.toggle div{width:25px;height:2px;background-color:#434343;margin:4px 0}.league-table .zone{border-bottom:2px solid #909090}
+.league-table .zone-reverse{border-top:2px solid #909090}.minus{color:red}.plus{color:green}
+@media screen and (max-width:545px){.league-table td,.league-table th{padding:4px 3px;font-size:13.5px}.league-table td:nth-of-type(2){padding-right:10px}}
+@media screen and (max-width:425px){.league-table td,.league-table th{padding:4px 2px;font-size:13px}.league-table tbody td:first-child,.league-table thead th:first-child{padding-left:8px}.league-table tbody td:last-child,.league-table thead th:last-child{padding-right:8px}}
+
+
+.contact-form{
+    background: #fff;
+    margin-top: 10%;
+    margin-bottom: 5%;
+    width: 70%;
+}
+.contact-form .form-control{
+    border-radius:1rem;
+}
+.contact-image{
+    text-align: center;
+}
+.contact-image img{
+    border-radius: 6rem;
+    width: 11%;
+    margin-top: -3%;
+    transform: rotate(29deg);
+}
+.contact-form form{
+    padding: 14%;
+}
+.contact-form form .row{
+    margin-bottom: -7%;
+}
+.contact-form h3{
+    margin-bottom: 8%;
+    margin-top: -10%;
+    text-align: center;
+    color: #dc3545;
+}
+.contact-form .btnContact {
+    width: 50%;
+    border: none;
+    border-radius: 1rem;
+    padding: 1.5%;
+    background: #dc3545;
+    font-weight: 600;
+    color: #fff;
+    cursor: pointer;
+}
+.btnContactSubmit
+{
+    width: 50%;
+    border-radius: 1rem;
+    padding: 1.5%;
+    color: #fff;
+    background-color: #0062cc;
+    border: none;
+    cursor: pointer;
+}
