--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -105,63 +105,63 @@ section .section-title {
     margin-bottom: 50px;
     text-transform: uppercase;
 }
-#footer {
-    background: #007b5e !important;
-}
-#footer h5{
+
+footer h5{
     padding-left: 10px;
     border-left: 3px solid #eeeeee;
     padding-bottom: 6px;
     margin-bottom: 20px;
     color:#ffffff;
 }
-#footer a {
+footer a {
     color: #ffffff;
     text-decoration: none !important;
     background-color: transparent;
     -webkit-text-decoration-skip: objects;
 }
-#footer ul.social li{
+footer ul.social li{
     padding: 3px 0;
 }
-#footer ul.social li a i {
+footer ul.social li a i {
     margin-right: 5px;
-    font-size:25px;
+    font-size:35px;
     -webkit-transition: .5s all ease;
     -moz-transition: .5s all ease;
     transition: .5s all ease;
 }
-#footer ul.social li:hover a i {
+footer ul.social li:hover a i {
     font-size:30px;
     margin-top:-10px;
 }
-#footer ul.social li a,
-#footer ul.quick-links li a{
+footer ul.social li a,
+footer ul.quick-links li a{
     color:#ffffff;
 }
-#footer ul.social li a:hover{
+footer ul.social li a:hover{
     color:#eeeeee;
+    text-decoration: none;
 }
-#footer ul.quick-links li{
+footer ul.quick-links li{
     padding: 3px 0;
     -webkit-transition: .5s all ease;
     -moz-transition: .5s all ease;
     transition: .5s all ease;
 }
-#footer ul.quick-links li:hover{
+footer ul.quick-links li:hover{
     padding: 3px 0;
     margin-left:5px;
     font-weight:700;
+
 }
-#footer ul.quick-links li a i{
+footer ul.quick-links li a i{
     margin-right: 5px;
 }
-#footer ul.quick-links li:hover a i {
+footer ul.quick-links li:hover a i {
     font-weight: 700;
 }
 
 @media (max-width:767px){
-    #footer h5 {
+    footer h5 {
         padding-left: 0;
         border-left: transparent;
         padding-bottom: 0px;
