--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -9,7 +9,7 @@
 
 
 footer{
-    background-color: $danger;
+    background-color: $samba;
     color: whitesmoke;
     padding: 10px;
     text-align: center;
@@ -18,6 +18,10 @@ footer{
 .heroBanner {
     min-height: 200px;
     height: auto;
+}
+
+.navbar{
+    background-color: $samba;
 }
 .navbar p {
     color: white;
