--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -15,6 +15,7 @@ body{
     font-family: 'Lato', sans-serif !important;
     font-weight: 400;
     font-size: 16px !important;
+    background-color: rgb(243, 241, 241)!important;
     
 }
 
@@ -43,22 +44,36 @@ footer{
     font-weight: bolder;
     font-family: 'Nunito', sans-serif;
 }
-.league-table{overflow-x:auto;padding-bottom:5px}
-.league-table table{font-family:Arial,"Helvetica Neue",Helvetica,sans-serif;border-collapse:collapse}
-.league-table thead tr{background-color:#f4f4f4;border-bottom:1px solid #bdbdbd}
-.league-table tbody td:last-child,.league-table thead th:last-child{padding-right:15px;font-weight:600}
-.league-table tbody td:first-child,.league-table thead th:first-child{padding-left:15px}
-.league-table thead th:first-child{padding-right:10px}.league-table thead th:nth-child(2){text-align:left}
-.league-table td,.league-table th{padding:4px 9px;font-size:14.5px}.league-table td{height:36px}.league-table th{height:25px}
-.league-table tr:nth-of-type(even){background-color:#fafafa}.league-table td:nth-last-of-type(-n+8){text-align:center;min-width:20px;height:27px}
-.league-table td:nth-of-type(2){font-weight:600;padding-right:20px;width:110px;word-wrap:break-word;overflow:hidden}
-.league-table tfoot tr{padding-top:10px;font-size:.75em;border:none}.league-table tr{border-bottom:1px solid #bdbdbd}
-.league-table caption{background:#cb2d3e;background:-webkit-linear-gradient(to right,#ef473a,#cb2d3e);background:linear-gradient(to right,#ef473a,#cb2d3e);color:#fff;padding:10px;letter-spacing:1px;font-size:1.1em}#reverseTable,.toggle{cursor:pointer}#reverseTable span{font-size:.7em;color:#434343}
-.hide-team{position:absolute;visibility:hidden}.toggle{margin:6px auto 0 auto;width:25px}.toggle div{width:25px;height:2px;background-color:#434343;margin:4px 0}.league-table .zone{border-bottom:2px solid #909090}
-.league-table .zone-reverse{border-top:2px solid #909090}.minus{color:red}.plus{color:green}
-@media screen and (max-width:545px){.league-table td,.league-table th{padding:4px 3px;font-size:13.5px}.league-table td:nth-of-type(2){padding-right:10px}}
-@media screen and (max-width:425px){.league-table td,.league-table th{padding:4px 2px;font-size:13px}.league-table tbody td:first-child,.league-table thead th:first-child{padding-left:8px}.league-table tbody td:last-child,.league-table thead th:last-child{padding-right:8px}}
 
+
+.side-image{
+  max-width: 360px;
+  filter: drop-shadow(3px 3px 1px rgb(99, 95, 95));
+}
+
+.side-text {
+  max-width: 1000px;
+}
+
+.section-wrap {
+  background: linear-gradient(100deg, #dbd2d2ef 50%, #e4d7d7ef 50%);
+  justify-content: center;
+}
+
+.section-wrap h2 {
+  text-align: center;
+  margin: 20px 0px
+}
+
+.section-wrap-alt {
+  background: linear-gradient(260deg, #dbd2d2ef 50%, #e4d7d7ef 50%);
+  justify-content: center;
+}
+
+.section-wrap-alt h2 {
+  text-align: center;
+  margin: 20px 0px
+}
 
 .contact-form{
     background: #fff;
@@ -156,6 +171,7 @@ footer{
 }
 
 #mainNavLinks{
+  background-color: rgb(243, 241, 241)!important;
   background-color: white;
   padding: 15px 0px;
   a{
