--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10020,6 +10020,55 @@ footer {
   text-align: center;
 }
 
+/* Style The Dropdown Button */
+.dropbtn {
+  background-color: #4CAF50;
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+}
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 260px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 4;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {
+  background-color: #f1f1f1;
+}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+/* Change the background color of the dropdown button when the dropdown content is shown */
+.dropdown:hover .dropbtn {
+  background-color: #3e8e41;
+}
+
 .heroBanner {
   min-height: 200px;
   height: auto;
@@ -10121,7 +10170,7 @@ footer {
   margin-bottom: 8%;
   margin-top: -10%;
   text-align: center;
-  color: #dc3545;
+  color: #aa0000;
 }
 
 .contact-form .btnContact {
@@ -10129,7 +10178,7 @@ footer {
   border: none;
   border-radius: 1rem;
   padding: 1.5%;
-  background: #dc3545;
+  background: #aa0000;
   font-weight: 600;
   color: #fff;
   cursor: pointer;
