--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10020,6 +10020,49 @@ footer {
   text-align: center;
 }
 
+/* Mobile Hamburger */
+/* Style the navigation menu */
+.topnav {
+  overflow: hidden;
+  background-color: #aa0000;
+  position: relative;
+}
+
+/* Hide the links inside the navigation menu (except for logo/home) */
+.topnav #myLinks {
+  display: none;
+}
+
+/* Style navigation menu links */
+.topnav a {
+  color: white;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+  display: block;
+}
+
+/* Style the hamburger menu */
+.topnav a.icon {
+  background: #aa0000;
+  display: block;
+  position: absolute;
+  right: 0;
+  top: 0;
+}
+
+/* Add a grey background color on mouse-over */
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+/* Style the active link (or home/logo) */
+.active {
+  background-color: rgba(0, 0, 0, 0.2);
+  color: white;
+}
+
 /* Style The Dropdown Button */
 .dropbtn {
   background-color: #4CAF50;
